fix: text alignment on home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,6 @@ body {
   min-height: 100vh;
   background-color: rgba(0, 0, 0, 0.65);
   padding: 2rem;
-  text-align: center;
 }
 
 header {
@@ -33,7 +32,7 @@ header {
   list-style: none;
   padding: 0;
   margin: 0;
-  width: 100%
+  width: 100%;
 }
 
 .character-wrapper {
@@ -42,7 +41,7 @@ header {
 }
 
 .side-menu li {
-  text-align: center;
+  text-align: justify;
 }
 
 .side-menu img {
@@ -68,13 +67,21 @@ header {
 }
 
 .hero {
-  margin-top: 2rem;
+  margin: 2rem auto;
   max-width: 800px;
 }
 
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: justify;
+}
+
 .hero h2 {
-  font-size: 3.5rem;
+  font-size: 3rem;
   color: #ff5252;
+  text-align: center;
 }
 
 .hero p {
@@ -84,8 +91,8 @@ header {
 }
 
 footer {
-  background-color: #1c1c1c00;
-  text-align: center;
+  background-color: transparent;
+  text-align: justify;
   padding: 1rem;
   font-size: 0.9rem;
   color: #cccccc;
